--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>🕯️ Тайный Шифратор с Модалкой Входа</title>
+  <title>Просто сайт. обычный..</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
