--- a/index.html
+++ b/index.html
@@ -369,5 +369,12 @@
     btnEncode.addEventListener('click', encode);
     btnDecode.addEventListener('click', decode);
   </script>
+console.log("Введённый ник:", user);
+console.log("Зашифрованный ник:", userEnc);
+console.log("Ожидаемый ник:", encLogin);
+console.log("Введённый пароль:", pass);
+console.log("Зашифрованный пароль:", passEnc);
+console.log("Ожидаемый пароль:", encPass);
+</script>
 </body>
 </html>
