--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title> просто сайт. ничего такого..</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Просто сайт. ничего такого...</title>
+ <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
     body {
@@ -229,10 +229,9 @@
   <!-- Модальное окно входа -->
   <div id="modalOverlay" role="dialog" aria-modal="true" aria-labelledby="modalTitle" aria-describedby="modalDesc">
     <div id="modalBox">
-      <h2 id="modalTitle">🔒 Вход в #Секретныйкод</h2>
-      <input id="modalUsername" type="text" autocomplete="off" placeholder="Имя (ник)" aria-label="Имя пользователя" />
+      <h2 id="modalTitle">🔒 Введите пароль</h2>
       <input id="modalPassword" type="password" autocomplete="off" placeholder="Пароль" aria-label="Пароль" />
-      <div id="modalError">Неверный ник или пароль!</div>
+      <div id="modalError">Неверный пароль!</div>
       <button id="modalLoginBtn" aria-describedby="modalError">Войти</button>
     </div>
   </div>
@@ -242,15 +241,14 @@
     <h1>#Секретныйкод - Магический Шифратор</h1>
     <textarea id="inputText" placeholder="Введите текст..." aria-label="Поле ввода текста"></textarea>
     <div class="buttons">
-      <button id="btnEncode" disabled aria-disabled="true" title="Сначала войдите!">✍️ Написать</button>
-      <button id="btnDecode" disabled aria-disabled="true" title="Сначала войдите!">📖 Прочитать</button>
+      <button id="btnEncode" disabled aria-disabled="true" title="Сначала введите пароль">✍️ Написать</button>
+      <button id="btnDecode" disabled aria-disabled="true" title="Сначала введите пароль">📖 Прочитать</button>
     </div>
     <div id="outputText" aria-live="polite" aria-atomic="true" tabindex="0"></div>
   </div>
 
   <script>
-    // Двойное кодирование Base64 с перемешиванием
-    // Перемешивание: меняем каждую пару символов местами
+    // Перемешиваем пару символов для обфускации
     function shuffleString(str) {
       let arr = str.split('');
       for (let i = 0; i < arr.length - 1; i += 2) {
@@ -258,14 +256,14 @@
       }
       return arr.join('');
     }
-
-    // Кодируем с двойным base64 + shuffle
+    // Кодируем в двойной base64 + перемешивание
     function doubleEncode(str) {
       const once = btoa(unescape(encodeURIComponent(str)));
       const shuffled = shuffleString(once);
       return btoa(unescape(encodeURIComponent(shuffled)));
     }
-    // Декодируем обратно: base64 decode + unshuffle + base64 decode
+
+    // Декодируем (если надо, не используется в проверке)
     function unshuffleString(str) {
       let arr = str.split('');
       for (let i = 0; i < arr.length - 1; i += 2) {
@@ -283,19 +281,57 @@
       }
     }
 
-    // Ник и пароль, ЗАШИФРОВАННЫЕ этим методом
-    const encLogin = "Z0NJQkI4R1NGUT09"; // doubleEncode("E_S_BFFS")
-    const encPass = "T0ZWT0xBQkpDR1EwNEZKR1YwSTJHM1NGUTlXMjAyNU9WQjRWQjBZR1QwVkhR"; // doubleEncode("мороженоебустобинокль")
+    // Пароль, зашифрованный этим способом (для "ЭмороженоеСбустоЛПбинокль")
+    const encPass = "T0ZWT0xBQkpEQVYwMUxXQjZLWkpCR0JDM1pDVkNaVTFJWQ==";
 
-    // Проверка правильности введённых данных
-    function checkAccess() {
-      const user = modalUsername.value.trim();
+    // Элементы
+    const modalOverlay = document.getElementById('modalOverlay');
+    const modalPassword = document.getElementById('modalPassword');
+    const modalLoginBtn = document.getElementById('modalLoginBtn');
+    const modalError = document.getElementById('modalError');
+    const app = document.getElementById('app');
+    const inputText = document.getElementById('inputText');
+    const btnEncode = document.getElementById('btnEncode');
+    const btnDecode = document.getElementById('btnDecode');
+    const outputText = document.getElementById('outputText');
+
+    // Шифровальные карты
+    const mapEncode = {
+      'А':'о', 'Б':'з', 'В':'ы', 'Г':'Б', 'Д':'я', 'Е':'м', 'Ж':'й', 'З':'а', 'Ы':'ь', 'И':'р', 'Й':'ш', 'К':'ж', 'Л':'ф', 'М':'ц', 'Н':'т', 'О':'и',
+      'П':'э', 'Р':'п', 'С':'х', 'Т':'ч', 'У':'г', 'Ф':'к', 'Х':'л', 'Ц':'с', 'Ч':'д', 'Ш':'в', 'Щ':'у', 'Ь':'щ', 'Ю':'н', 'Я':'ю',
+
+      'а':'о', 'б':'з', 'в':'ы', 'г':'б', 'д':'я', 'е':'м', 'ж':'й', 'з':'а', 'ы':'ь', 'и':'р', 'й':'ш', 'к':'ж', 'л':'ф', 'м':'ц', 'н':'т', 'о':'и',
+      'п':'э', 'р':'п', 'с':'х', 'т':'ч', 'у':'г', 'ф':'к', 'х':'л', 'ц':'с', 'ч':'д', 'ш':'в', 'щ':'у', 'ь':'щ', 'ю':'н', 'я':'ю'
+    };
+
+    const mapDecode = {};
+    for (const key in mapEncode) {
+      mapDecode[mapEncode[key]] = key;
+    }
+
+    // Функция трансформации текста по карте
+    function transform(text, map) {
+      let result = '';
+      for (let char of text) {
+        result += (char in map) ? map[char] : char;
+      }
+      return result;
+    }
+
+    // Анимация печати магическим стилем
+    async function typeText(element, text, delay = 55) {
+      element.textContent = '';
+      for (let char of text) {
+        element.textContent += char;
+        element.style.color = ['#d3bfff', '#a67cff', '#c1a3ff'][Math.floor(Math.random() * 3)];
+        await new Promise(r => setTimeout(r, delay));
+      }
+    }
+
+    // Проверка пароля
+    function checkPassword() {
       const pass = modalPassword.value.trim();
-
-      const userEnc = doubleEncode(user);
-      const passEnc = doubleEncode(pass);
-
-      if (userEnc === encLogin && passEnc === encPass) {
+      if (doubleEncode(pass) === encPass) {
         modalError.style.display = 'none';
         modalOverlay.style.display = 'none';
         app.style.display = 'block';
@@ -303,7 +339,6 @@
         btnDecode.disabled = false;
         btnEncode.setAttribute('aria-disabled', 'false');
         btnDecode.setAttribute('aria-disabled', 'false');
-        modalUsername.value = '';
         modalPassword.value = '';
         inputText.focus();
       } else {
@@ -313,68 +348,26 @@
       }
     }
 
-    modalLoginBtn.addEventListener('click', checkAccess);
-    modalPassword.addEventListener('keydown', e => {
-      if (e.key === 'Enter') {
-        checkAccess();
-      }
-    });
-    modalUsername.addEventListener('keydown', e => {
-      if (e.key === 'Enter') {
-        modalPassword.focus();
-      }
-    });
-
-    // Карты подстановок
-    const mapEncode = {
-      'а': 'о', 'б': 'з', 'в': 'ы', 'г': 'Б', 'д': 'я', 'е': 'м', 'ж': 'й', 'з': 'а', 'ы': 'ь',
-      'и': 'р', 'й': 'ш', 'к': 'ж', 'л': 'ф', 'м': 'ц', 'н': 'т', 'о': 'и', 'п': 'э', 'р': 'п',
-      'с': 'х', 'т': 'ч', 'у': 'г', 'ф': 'к', 'х': 'л', 'ц': 'с', 'ч': 'д', 'ш': 'в', 'щ': 'у',
-      'ь': 'щ', 'ю': 'н', 'я': 'ю'
-    };
-    const mapDecode = Object.fromEntries(
-      Object.entries(mapEncode).map(([k, v]) => [v.toLowerCase(), k.toLowerCase()])
-    );
-
-    // Трансформация с сохранением регистра
-    function transform(text, map) {
-      return [...text].map(char => {
-        const lower = char.toLowerCase();
-        if (!map[lower]) return char;
-        const replaced = map[lower];
-        return char === lower ? replaced : replaced.toUpperCase();
-      }).join('');
-    }
-
-    // Магическая анимация печати с мерцанием
-    async function typeText(element, text, delay = 40) {
-      element.textContent = '';
-      for (let i = 0; i < text.length; i++) {
-        element.textContent += text[i];
-        element.style.animation = 'magic-glow 1.2s ease-in-out infinite alternate';
-        await new Promise(r => setTimeout(r, delay));
-      }
-      element.style.animation = 'none';
-    }
-
+    // Кодировать
     async function encode() {
-      const output = transform(inputText.value, mapEncode);
+      const input = inputText.value;
+      const output = transform(input, mapEncode);
       await typeText(outputText, output);
     }
+    // Декодировать
     async function decode() {
-      const output = transform(inputText.value, mapDecode);
+      const input = inputText.value;
+      const output = transform(input, mapDecode);
       await typeText(outputText, output);
     }
+
+    modalLoginBtn.addEventListener('click', checkPassword);
+    modalPassword.addEventListener('keypress', e => {
+      if (e.key === 'Enter') checkPassword();
+    });
 
     btnEncode.addEventListener('click', encode);
     btnDecode.addEventListener('click', decode);
   </script>
-console.log("Введённый ник:", user);
-console.log("Зашифрованный ник:", userEnc);
-console.log("Ожидаемый ник:", encLogin);
-console.log("Введённый пароль:", pass);
-console.log("Зашифрованный пароль:", passEnc);
-console.log("Ожидаемый пароль:", encPass);
-</script>
 </body>
 </html>
